Fix footer breakpoint on mobile devices (d04)

--- a/04-nyt-user-selected-categories/style.css
+++ b/04-nyt-user-selected-categories/style.css
@@ -28,6 +28,7 @@ header {
 
 h1 {
   font-size: 3em;
+  line-height: 1;
   margin-top: 0;
   margin-bottom: .5rem;
 }
@@ -109,6 +110,10 @@ footer a, footer a:visited {
     padding-top: 2.5em;
     border-top: 1px solid #718096;
     margin-top: 2.5em;
+  }
+
+  footer p span {
+    display: block;
   }
 }
 
